// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`password (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > clears input on error when clearOnError is true 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  ▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<yellow>▲</fg>  foo
<yellow>│</fg>  ▪
<yellow>└</fg>  <yellow>Error</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<cyan>◆</fg>  foo
<cyan>│</fg>  ▪[7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  ▪▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>▪▪</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
[7m[8m_[28m[27m

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "<green>◇</fg>  foo
",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > renders and clears validation errors 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  ▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<yellow>▲</fg>  foo
<yellow>│</fg>  ▪
<yellow>└</fg>  <yellow>Password must be at least 2 characters</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<cyan>◆</fg>  foo
<cyan>│</fg>  ▪▪[7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>▪▪</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > renders cancelled value 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  ▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>▪</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > renders custom mask 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  *[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  **[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>**</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > renders masked value 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  ▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  ▪▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>▪▪</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > renders message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  ",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = false) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
[7m[8m_[28m[27m

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "<green>◇</fg>  foo
",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > clears input on error when clearOnError is true 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  ▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<yellow>▲</fg>  foo
<yellow>│</fg>  ▪
<yellow>└</fg>  <yellow>Error</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<cyan>◆</fg>  foo
<cyan>│</fg>  ▪[7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  ▪▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>▪▪</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
[7m[8m_[28m[27m

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "<green>◇</fg>  foo
",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > renders and clears validation errors 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  ▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<yellow>▲</fg>  foo
<yellow>│</fg>  ▪
<yellow>└</fg>  <yellow>Password must be at least 2 characters</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<cyan>◆</fg>  foo
<cyan>│</fg>  ▪▪[7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>▪▪</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > renders cancelled value 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  ▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>▪</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > renders custom mask 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  *[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  **[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>**</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > renders masked value 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  ▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  ▪▪[7m[8m_[28m[27m",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>▪▪</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > renders message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  [7m[8m_[28m[27m
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  ",
  "
",
  "<cursor.show>",
]
`;

exports[`password (isCI = true) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
[7m[8m_[28m[27m

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "<green>◇</fg>  foo
",
  "
",
  "<cursor.show>",
]
`;
